# NavyComponents

./: .gitignore  CMakeLists.txt  README.md
CircularValueWidget/: CMakeLists.txt  CircularValueWidget.cpp  CircularValueWidget.h  CompassWidget.cpp  CompassWidget.h  CompassWidgetPlugin.h  SpeedometerWidget.cpp  SpeedometerWidget.h  SpeedometerWidgetPlugin.cpp  SpeedometerWidgetPlugin.h  main.cpp
CircularValueWidget/include/BaseCircularWidget/: CircularValueWidget.h
CircularValueWidget/include/SpeedometerWidget/: SpeedometerWidget.h
CircularValueWidget/res/: res.qrc
CircularValueWidget/src/BaseCircularWidget/: CircularValueWidget.cpp
CircularValueWidget/src/CompassWidget/: CompassWidget.cpp  CompassWidgetPlugin.cpp
CircularValueWidget/src/SpeedometerWidget/: SpeedometerWidget.cpp
CoordinateEdit/: CMakeLists.txt  CoordinateEdit.cpp  CoordinateEdit.h  NaviStrings.cpp  NaviStrings.h
GeoMatch/: CMakeLists.txt  GeoMatchFunc.cpp  GeoMatchFunc.h  defines.h
NmeaBuilder/: CMakeLists.txt  nmea.cpp  nmea.h
